// Test: Streaming backpressure handling (T047)
//
// Tests that the streaming service correctly handles situations where
// the client sends chunks faster than the server can process them.
//
// This test validates:
// - Bounded buffer prevents unbounded memory growth
// - STREAM_ERROR_BUFFER_OVERFLOW returned when buffer is full
// - Chunks are not dropped silently
// - Server provides backpressure signals to client

use remotemedia_runtime::grpc_service::generated::{
    AudioChunk, AudioBuffer, AudioFormat, StreamControl,
    PipelineManifest, NodeManifest, StreamInit, StreamRequest, StreamResponse,
    stream_response::Response,
};

// Integration test: Send chunks faster than processing capacity
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_backpressure_buffer_overflow() {
    // This test will:
    // 1. Initialize streaming pipeline with slow-processing node (e.g., sleep 100ms per chunk)
    // 2. Send chunks rapidly without waiting for responses (e.g., 20 chunks in 100ms)
    // 3. Verify service returns STREAM_ERROR_BUFFER_OVERFLOW error
    // 4. Verify error includes buffer capacity info
    // 5. Verify some chunks were successfully processed before overflow
    
    // Expected behavior:
    // - First N chunks (buffer size) are accepted
    // - Subsequent chunks cause buffer overflow
    // - Server sends ErrorResponse with STREAM_ERROR_BUFFER_OVERFLOW
    // - Connection remains open (graceful error handling)
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Verify chunks_dropped metric
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_backpressure_chunks_dropped_metric() {
    // This test will:
    // 1. Trigger backpressure situation
    // 2. Request StreamMetrics
    // 3. Verify chunks_dropped field is non-zero
    // 4. Verify chunks_processed + chunks_dropped = total chunks sent
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Verify graceful handling without overflow
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_backpressure_graceful_flow_control() {
    // This test will:
    // 1. Initialize streaming pipeline
    // 2. Send chunks at a rate that matches processing capacity
    // 3. Monitor buffer_samples in StreamMetrics
    // 4. Verify buffer_samples stays within bounds
    // 5. Verify no chunks are dropped (chunks_dropped = 0)
    // 6. Verify all chunks are processed successfully
    
    // This validates the "happy path" where client respects backpressure
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Recovery after backpressure
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_backpressure_recovery() {
    // This test will:
    // 1. Trigger backpressure (buffer overflow)
    // 2. Slow down chunk sending rate
    // 3. Wait for buffer to drain
    // 4. Resume sending chunks at sustainable rate
    // 5. Verify streaming resumes successfully
    // 6. Verify no additional errors after recovery
    
    todo!("Implement once StreamingPipelineService is available");
}

// Helper: Create slow-processing pipeline manifest
#[allow(dead_code)]
fn create_slow_pipeline_manifest() -> PipelineManifest {
    // Pipeline with artificial delay to trigger backpressure
    PipelineManifest {
        version: "1.0.0".to_string(),
        metadata: None,
        nodes: vec![
            NodeManifest {
                id: "input".to_string(),
                node_type: "audio_input".to_string(),
                params: "{}".to_string(),
                is_streaming: true,
                capabilities: None,
                host: "".to_string(),
                runtime_hint: 0,
            },
            NodeManifest {
                id: "delay".to_string(),
                node_type: "DelayNode".to_string(),
                params: r#"{"delay_ms": 100}"#.to_string(), // Artificial 100ms delay
                is_streaming: true,
                capabilities: None,
                host: "".to_string(),
                runtime_hint: 0,
            },
        ],
        connections: vec![],
    }
}

// Helper: Create audio chunk
#[allow(dead_code)]
fn create_audio_chunk(sequence: u64) -> AudioChunk {
    let num_samples = 1600; // 100ms at 16kHz
    let samples_f32: Vec<f32> = vec![0.0; num_samples];
    let samples_bytes: Vec<u8> = samples_f32.iter()
        .flat_map(|&s| s.to_le_bytes())
        .collect();
    
    AudioChunk {
        node_id: "input".to_string(),
        buffer: Some(AudioBuffer {
            samples: samples_bytes,
            sample_rate: 16000,
            channels: 1,
            format: AudioFormat::F32 as i32,
            num_samples: num_samples as u64,
        }),
        sequence,
        timestamp_ms: sequence * 100,
    }
}
