// Test: Streaming session lifecycle (T048)
//
// Tests that streaming sessions can be properly initialized, managed, and closed.
//
// This test validates:
// - COMMAND_CLOSE gracefully flushes pending chunks and returns final metrics
// - COMMAND_CANCEL aborts immediately and discards pending data
// - Session cleanup happens on disconnect
// - StreamClosed message is sent with final metrics

use remotemedia_runtime::grpc_service::generated::{
    AudioChunk, AudioBuffer, AudioFormat, StreamControl, StreamClosed,
    PipelineManifest, NodeManifest, StreamInit, StreamRequest, StreamResponse,
    stream_control::Command, stream_response::Response,
};

// Integration test: Graceful close with COMMAND_CLOSE
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_stream_graceful_close() {
    // This test will:
    // 1. Initialize streaming session
    // 2. Stream 5 chunks
    // 3. Send StreamControl with COMMAND_CLOSE
    // 4. Verify server processes remaining chunks in buffer
    // 5. Verify server sends StreamClosed response
    // 6. Verify StreamClosed contains final ExecutionMetrics
    // 7. Verify final_metrics.wall_time_ms is populated
    // 8. Verify reason field is "Client requested close"
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Immediate cancel with COMMAND_CANCEL
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_stream_immediate_cancel() {
    // This test will:
    // 1. Initialize streaming session
    // 2. Stream 10 chunks rapidly
    // 3. Send StreamControl with COMMAND_CANCEL immediately
    // 4. Verify server aborts without processing remaining chunks
    // 5. Verify server sends StreamClosed response
    // 6. Verify StreamClosed indicates cancellation
    // 7. Verify chunks_processed < total chunks sent
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Session cleanup on client disconnect
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_stream_disconnect_cleanup() {
    // This test will:
    // 1. Initialize streaming session
    // 2. Stream 3 chunks
    // 3. Abruptly close client connection (drop stream)
    // 4. Verify server detects disconnect
    // 5. Verify server cleans up session resources
    // 6. Verify active_streams metric decrements
    // 7. (If possible) Verify memory is released
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Verify final metrics in StreamClosed
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_stream_closed_final_metrics() {
    // This test will:
    // 1. Initialize streaming session
    // 2. Stream 20 chunks
    // 3. Send COMMAND_CLOSE
    // 4. Receive StreamClosed response
    // 5. Verify final_metrics contains:
    //    - wall_time_ms (total session duration)
    //    - cpu_time_ms (total CPU used)
    //    - memory_used_bytes (peak memory)
    //    - node_metrics for each node in pipeline
    // 6. Verify metrics are consistent with per-chunk metrics
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Multiple sequential sessions
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_multiple_sequential_sessions() {
    // This test will:
    // 1. Open streaming session 1
    // 2. Stream chunks and close with COMMAND_CLOSE
    // 3. Open streaming session 2 (new session_id)
    // 4. Stream chunks and close
    // 5. Verify both sessions have unique session_ids
    // 6. Verify both sessions are cleaned up properly
    // 7. Verify active_streams metric returns to 0
    
    todo!("Implement once StreamingPipelineService is available");
}

// Integration test: Session timeout enforcement
#[test]
#[ignore = "Requires StreamingPipelineService implementation"]
fn test_stream_session_timeout() {
    // This test will:
    // 1. Initialize streaming session
    // 2. Stream 2 chunks
    // 3. Stop sending (idle for timeout duration)
    // 4. Verify server sends STREAM_ERROR_TIMEOUT
    // 5. Verify server closes session
    // 6. Verify StreamClosed indicates timeout reason
    
    // Note: This may require configuring a short timeout for testing
    
    todo!("Implement once StreamingPipelineService is available");
}

// Helper: Create simple streaming manifest
#[allow(dead_code)]
fn create_streaming_manifest() -> PipelineManifest {
    PipelineManifest {
        version: "1.0.0".to_string(),
        metadata: None,
        nodes: vec![
            NodeManifest {
                id: "input".to_string(),
                node_type: "audio_input".to_string(),
                params: "{}".to_string(),
                is_streaming: true,
                capabilities: None,
                host: "".to_string(),
                runtime_hint: 0,
            },
        ],
        connections: vec![],
    }
}

// Helper: Create audio chunk
#[allow(dead_code)]
fn create_audio_chunk(sequence: u64) -> AudioChunk {
    let num_samples = 1600; // 100ms at 16kHz
    let samples_f32: Vec<f32> = vec![0.0; num_samples];
    let samples_bytes: Vec<u8> = samples_f32.iter()
        .flat_map(|&s| s.to_le_bytes())
        .collect();
    
    AudioChunk {
        node_id: "input".to_string(),
        buffer: Some(AudioBuffer {
            samples: samples_bytes,
            sample_rate: 16000,
            channels: 1,
            format: AudioFormat::F32 as i32,
            num_samples: num_samples as u64,
        }),
        sequence,
        timestamp_ms: sequence * 100,
    }
}

// Helper: Send close command
#[allow(dead_code)]
fn create_close_command() -> StreamRequest {
    StreamRequest {
        request: Some(remotemedia_runtime::grpc_service::generated::stream_request::Request::Control(
            StreamControl {
                command: Command::Close as i32,
            }
        )),
    }
}

// Helper: Send cancel command
#[allow(dead_code)]
fn create_cancel_command() -> StreamRequest {
    StreamRequest {
        request: Some(remotemedia_runtime::grpc_service::generated::stream_request::Request::Control(
            StreamControl {
                command: Command::Cancel as i32,
            }
        )),
    }
}
